--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<script type="text/javascript" src='js/app.js'></script>
 </head>	
 
-<body ng-controller='PokemonCtrl'>
-	<div class='container'>
+<body>
+	<div class='container-fluid'>
 		<div ui-view></div>
 	</div>
 
