--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
           Home
         </a>
         <form class="navbar-form navbar-left" role="search">
+        <a class="navbar-brand" href="/#/about">
+          about
+        </a>
+        <a class="navbar-brand" href="/#/api">
+          API
+        </a>
       </div>
     </div>
   </nav>
