--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="GreysAnatomyApp">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+<meta charset="UTF-8">
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Martel+Sans:600|Raleway:500|Creepster" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+	<!-- <link href="angular-carousel-3d.css" rel="stylesheet" type="text/css"> -->
+  <title>Grey's Anatomy</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-resource.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-animate.js"></script>
+<!--   <script src="angular.js"></script>
+  <script src="angular-swipe.js"></script>
+  <script src="angular-carousel-3d.js"></script>
+  <script src="js/controllers.js"></script> -->
+  <script src="js/app.js"></script>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+	<div class="homePage">
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+	  <div class="container-fluid">
+	    <ul class="nav navbar-nav navbar-left">
+	      <li><a href="/#/GreysAnatomy">HOME</a></li>
+	      <li><a href="/#/ErrbodyDead">WHO DEAD?</a></li>
+	      <li><a href="/#/ShondaRhimes">THE CREATOR</a></li>
+	    </ul>
+	  </div>
+	</nav>
+	<br>
+	<br>
+	<br>
+	  <div class="container">
+	    <div ui-view></div>
+	  </div>
+	</div>
 </body>
 </html>
